<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">The Blue Elephant\'s Shield</string>
    <string name="action_settings">Settings</string>
    <string name="error_creating_file">Error creating file</string>
    <string name="error_reading_file">Error reading strings file</string>
    <string name="cant_get_root">Can\'t get root access</string>
    <string name="SON">Internet Shield ON</string>
    <string name="SOFF">Internet Shield OFF</string>
    <string name="NON">Nauta Shield ON</string>
    <string name="NOFF">Nauta Shield OFF</string>
    <string name="NNDNSON">Nauta Shield (no DNS) ON</string>
    <string name="NNDNSOFF">Nauta Shield (no DNS) OFF</string>
    <string name="BON">Blocking Data Connection ON</string>
    <string name="BOFF">Blocking Data Connection OFF</string>
    <string name="edit_strings">Edit internet blocking strings</string>
    <string name="title_activity_aplicaciones">Applications</string>
    <string name="nautaapps">Nauta allowed Apps</string>
    <string name="saveS">Save</string>
    <string name="about">About...</string>
    <string name="title_activity_about">About</string>
    <string name="aboutText">The Blue Elephant\'s Shield blocks otgoing connections of our devices to some networks like NAUTA\'s (used in mailing for phones) resulting in less consumption because of the reduction of requests of our devices to the network. \n\nAuthor: Jorge Alberto Díaz Orozco (Akiel)\ne-mail: diazorozcoj@gmail.com\n\nAgreements:\nto Ale, Ed.OS, PP and all the other Blue Elephants.\n\nSource Code Available on: https://github.com/jadolg/Shield.git</string>

</resources>
